# wxwidgets-text-editor

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build_and_package_app.sh  main.cpp  vcpkg.json
include/: myapp.h  myframe.h  texteditorapp.h  texteditorframe.h
src/: main.cpp  myapp.cpp  myframe.cpp  texteditorapp.cpp  texteditorframe.cpp
